--- a/config/config.json
+++ b/config/config.json
@@ -1,29 +1,40 @@
 {
-  "defaultDB": "./defaultDB.json",
-  "ocpp": {
-    "centralSystemUrl": "ws://www.ecarup.com/api/Ocpp16/110D687EEDFDAE52"
-  },
-  "stations": [
-    {
-      "name": "Station1",
-      "ports": [
-        {
-          "number": 1,
-          "relayPath": "/sys/class/gpio/gpio121/value",
-          "meterAddress": 1,
-          "meterRegister": 5218,
-          "currentRegister": 5220
-        },
-        {
-          "number": 2,
-          "relayPath": "/sys/class/gpio/gpio122/value",
-          "meterAddress": 2,
-          "meterRegister": 5218,
-          "currentRegister": 5220
-        }
-      ]
-    }
-  ],
+  "stationName": "Station1",
+  "pricePerKWh": 10.5,
   "modbusPort": "/dev/ttymxc4",
-  "modbusBaudRate": 9600
+  "modbusBaudRate": 9600,
+  "ports": [
+    {
+      "number": 1,
+      "relayPath": "/sys/class/gpio/gpio121/value",
+      "meterAddress": 1,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 3
+    },
+    {
+      "number": 2,
+      "relayPath": "/sys/class/gpio/gpio122/value",
+      "meterAddress": 2,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 4
+    },
+    {
+      "number": 3,
+      "relayPath": "/sys/class/gpio/gpio123/value",
+      "meterAddress": 3,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 5
+    },
+    {
+      "number": 4,
+      "relayPath": "/sys/class/gpio/gpio124/value",
+      "meterAddress": 4,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 6
+    }
+  ]
 }
