--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -1,26 +1,26 @@
 {
-    "centralSystemUrl": "ws://www.ecarup.com/api/Ocpp16",
-    "stationName": "110D687EEDFDAE52",
-    "ports": [
-      {
-        "number": 1,
-        "relayPath": "/sys/class/gpio/gpio121/value",
-        "meterAddress": 1,
-        "meterRegister": 5218,
-        "currentRegister": 5220,
-        "typeNumber": 3
-      },
-      {
-        "number": 2,
-        "relayPath": "/sys/class/gpio/gpio122/value",
-        "meterAddress": 2,
-        "meterRegister": 5218,
-        "currentRegister": 5220,
-        "typeNumber": 4
-      }
-    ],
-    "modbusPort": "/dev/ttymxc4",
-    "modbusBaudRate": 9600,
-    "pricePerKwh": 5.0
-  }
-  
+  "centralSystemUrl": "wss://hub.volttime.com",
+  "stationName": "cs1",
+  "pinCode": "4294",
+  "ports": [
+    {
+      "number": 1,
+      "relayPath": "/sys/class/gpio/gpio121/value",
+      "meterAddress": 1,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 3
+    },
+    {
+      "number": 2,
+      "relayPath": "/sys/class/gpio/gpio122/value",
+      "meterAddress": 2,
+      "meterRegister": 5218,
+      "currentRegister": 5220,
+      "typeNumber": 4
+    }
+  ],
+  "modbusPort": "/dev/ttymxc4",
+  "modbusBaudRate": 9600,
+  "pricePerKwh": 5.0
+}
