--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -1,6 +1,8 @@
 {
   "centralSystemUrl": "wss://hub.volttime.com",
   "stationName": "cs1",
+  "vendor": "Electricus",
+  "model": "Frankenstein",
   "pinCode": "4294",
   "connectors": [
     {
