--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -11,6 +11,7 @@
       "meterAddress": 1,
       "meterRegister": 5218,
       "currentRegister": 5220,
+      "serialNumberRegister": 1000, // Добавлено
       "typeNumber": 3
     },
     {
@@ -19,10 +20,12 @@
       "meterAddress": 2,
       "meterRegister": 5218,
       "currentRegister": 5220,
+      "serialNumberRegister": 1000, // Добавлено
       "typeNumber": 4
     }
   ],
   "modbusPort": "/dev/ttymxc4",
   "modbusBaudRate": 9600,
-  "pricePerKwh": 5.0
+  "pricePerKwh": 5.0,
+  "modemPort": "/dev/ttyUSB0" // Добавлено
 }
