--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -8,14 +8,14 @@
     {
       "id": 1,
       "relayPath": "/sys/class/gpio/gpio122/value",
-      "meterAddress": 1,
+      "meterAddress": 157,
       "meterRegister": 5218,
       "currentRegister": 5220,
       "serialNumberRegister": 1000,
       "typeNumber": 3
     }
   ],
-  "modbusPort": "/dev/ttymxc4",
+  "modbusPort": "/dev/ttyUSB0",
   "modbusBaudRate": 9600,
   "pricePerKwh": 5.0,
   "modemPort": "/dev/ttyUSB0"
