--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -8,15 +8,18 @@
     {
       "id": 1,
       "relayPath": "/sys/class/gpio/gpio122/value",
-      "meterAddress": 1,
-      "meterRegister": 5218,
-      "currentRegister": 5220,
-      "serialNumberRegister": 1000,
+      "meterAddress": 1,              
+      "meterRegister": 5218,          
+      "currentRegister": 5220,       
+      "serialNumberRegister": 1000,   
       "typeNumber": 3
     }
   ],
-  "modbusPort": "/dev/ttymxc2",
-  "modbusBaudRate": 9600,
+  "modbusPort": "/dev/ttymxc4",      
+  "modbusBaudRate": 9600,           
+  "modbusParity": "none",          
+  "modbusDataBits": 8,              
+  "modbusStopBits": 2,             
   "pricePerKwh": 5.0,
   "modemPort": "/dev/ttyUSB0"
 }
