--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -10,9 +10,11 @@
       "relayPath": "/sys/class/gpio/gpio122/value",
       "meterAddress": 1,              
       "energyRegister": 8716,         
-      "powerRegister": 8966,          
+      "powerRegister": 8916,          
       "serialNumberRegister": 1000,   
-      "typeNumber": 3
+      "typeNumber": 3,
+      "energyScale": 0.0002441411,          
+      "powerScale": 0.0002441411            
     }
   ],
   "modbusPort": "/dev/ttymxc4",      
