--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -13,8 +13,8 @@
       "powerRegister": 8966,          
       "serialNumberRegister": 1000,   
       "typeNumber": 3,
-      "energyScale": 0.0002441411,          
-      "powerScale": 0.0002441411            
+      "energyScale": 24414.11,          
+      "powerScale": 24414.11            
     }
   ],
   "modbusPort": "/dev/ttymxc4",      
