--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "async-lock": "^1.4.1",
     "babel-runtime": "^6.26.0",
     "extract-zip": "^2.0.1",
     "fs": "^0.0.1-security",
