--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "async-lock": "^1.4.1",
+    "async-mutex": "^0.5.0",
     "babel-runtime": "^6.26.0",
     "extract-zip": "^2.0.1",
     "fs": "^0.0.1-security",
