--- a/config/ocpp_config.json
+++ b/config/ocpp_config.json
@@ -5,7 +5,7 @@
   "stationName": "CP0001",
   "vendor": "Electricus",
   "model": "Frankenstein",
-  "pinCode": "avade",
+  "pinCode": "6848",
   "connectors": [
     {
       "id": 1,
